# GestClean

./: .gitignore  config.py  forms.py  main.py  models.py  pyproject.toml
routes/: __init__.py  agenda.py  arquivo.py  atendimento.py  configuracoes.py  gerais.py  login.py  paciente.py  protocolo.py  recursos.py  teste.py
static/css/: agenda.css  atendimento.css  atendimentos.css  cadastro_paciente.css  configuracoes.css  flask_message.css  home.css  login.css  navbar.css  pacientes.css  painel.css  protocolos.css  styles.css
static/scripts/: agenda.js  editar_paciente.js  flask_message.js  navbar.js  pacientes.js  painel.js  protocolos.js
templates/: base.html  flask_message.html
templates/logado/: agenda.html  atendimentos.html  cadastro_atendimento.html  cadastro_paciente.html  configuracoes.html  editar_atendimento.html  editar_paciente.html  navbar.html  pacientes.html  painel.html  protocolos.html
templates/padrao/: home.html  login.html
